	-> new 'div' tag
	
1.1.1:
	-> determine CITlabLaJob availability in UI via server call
	-> remove "new" (which was actually the old one) and buggy NCSR LA method

1.1.2:
	-> private FTP upload bugfix
	-> bugfix: preserve reading order during export
	
1.2.0:
	-> remove "analyze structure" from tools
	-> add "other tools" area and integrate polygon to baselines as first such tool
	-> redesigned HtrTrainingDialog
	-> more details on HTR models in TextRecognitionConfigDialog
	-> context menu for doclist widget (delete, duplicate)
	-> default sorting for docs in doclist is doc-id descending
	-> collection-combo-viewer enhanced
	-> filter for doclist viewers
	-> removed collection manager and moved all of its functionality into the doclist viewer
	
1.2.1:
	-> collapse open-local-doc, import, export and find btns in server widget to one drop-down btn
	-> revert to old collection combo viewer (new one did not work on mac)
	
1.2.2:
	-> encode METS URL before sending it
	-> reload doclist bug fixed
	
1.2.3:
	-> fixed bug that prevented starting the LA without any regions
	-> HTR training interface modified
	-> collection metadata editor
	
1.3.0:
	-> new collection selector widget
	-> redesigned transcription widget toolbar
	-> table-cells are focused individually (formerly: whole table was focused when double-clicking table cell)
	-> bugfix: selection of shapes in canvas did not work when moving a little bit during click
	-> iterate through table cells using arrow keys in canvas
	-> bugfix: duplicate document possible again
	-> bugfix: pages selector could not be opened in tools widget
	-> "delete tags for current selection" added to transcription widget context menu
	-> autosave: prompt user if he wants to load autosaved version if newer than loaded transcript
1.3.1:
	-> fixed delete document 
1.3.2:
	-> integrate baseline2polygon tool
	-> collection-wise / multiple documents server export
	-> fix TEI export issues regarding XML escaping (issue TranskribusCore#15)
	
	