@@ -4,7 +4,7 @@
 	<groupId>eu.transkribus</groupId>
 	<artifactId>TranskribusSwtGui</artifactId>
 	<packaging>jar</packaging>
-	<version>1.3.2.4-SNAPSHOT</version>
+	<version>1.3.2.5-SNAPSHOT</version>
 	<name>Transkribus</name>
 
 	<properties>
