@@ -3,7 +3,9 @@ package eu.transkribus.swt_gui.util;
 import java.util.ArrayList;
 
 import org.eclipse.swt.widgets.Composite;
+import org.eclipse.ui.internal.dnd.SwtUtil;
 
+import eu.transkribus.swt.util.SWTUtil;
 import eu.transkribus.swt_gui.mainwidget.storage.IStorageListener;
 import eu.transkribus.swt_gui.mainwidget.storage.Storage;
 
@@ -13,29 +15,44 @@ import eu.transkribus.swt_gui.mainwidget.storage.Storage;
  */
 public class CurrentDocPagesSelector extends DocPagesSelector {
 
-	public CurrentDocPagesSelector(Composite parent, int style) {
-		super(parent, style, new ArrayList<>());
+	public CurrentDocPagesSelector(Composite parent, int style, boolean showLabel, boolean showCurrentPageBtn, boolean showAllPagesBtn) {
+		super(parent, style, showLabel, showCurrentPageBtn, showAllPagesBtn, new ArrayList<>());
 
 		Storage.getInstance().addListener(new IStorageListener() {
-			
 			// on doc load, set pages of selector
 			public void handleDocLoadEvent(DocLoadEvent dle) { 
-				if (Storage.getInstance().isDocLoaded()) {
-					CurrentDocPagesSelector.this.setPages(Storage.getInstance().getDoc().getPages());
-				}
+				updatePagesFromStorage();
 			}
 			
 			// on page load, set pages text field to current page
 			public void handlePageLoadEvent(PageLoadEvent arg) { 
-				if (Storage.getInstance().isPageLoaded()) {
-					CurrentDocPagesSelector.this.getPagesText().setText(""+(Storage.getInstance().getPageIndex()+1));
-				}
+				updatePageStrFromStorage();
 			}
-			
 		});
 		
+		updatePagesFromStorage();
+		updatePageStrFromStorage();
 	}
-
 	
-
+	private void updatePagesFromStorage() {
+		if (Storage.getInstance().isPageLoaded()) {
+			if (!SWTUtil.isDisposed(CurrentDocPagesSelector.this) && !SWTUtil.isDisposed(CurrentDocPagesSelector.this.getPagesText())) {
+				CurrentDocPagesSelector.this.getPagesText().setText(""+(Storage.getInstance().getPageIndex()+1));	
+			}
+		}
+	}
+	
+	private void updatePageStrFromStorage() {
+		if (Storage.getInstance().isDocLoaded()) {
+			if (!SWTUtil.isDisposed(CurrentDocPagesSelector.this) && !SWTUtil.isDisposed(CurrentDocPagesSelector.this.getPagesText())) {
+				CurrentDocPagesSelector.this.setPages(Storage.getInstance().getDoc().getPages());	
+			}
+		}
+	}
+	
+	@Override protected void openDocPageViewer() {
+		updatePagesFromStorage();
+		super.openDocPageViewer();
+	}
+	
 }
