@@ -476,11 +476,15 @@ CHANGES AND BUGFIXES
 	-> bugfix: pages selector could not be opened in tools widget
 	-> "delete tags for current selection" added to transcription widget context menu
 	-> autosave: prompt user if he wants to load autosaved version if newer than loaded transcript
+	
 1.3.1:
-	-> fixed delete document 
+	-> fixed delete document
+	 
 1.3.2:
 	-> integrate baseline2polygon tool
 	-> collection-wise / multiple documents server export
-	-> fix TEI export issues regarding XML escaping (issue TranskribusCore#15)
+	-> fixed TEI export issues regarding XML escaping (issue TranskribusCore#15)
+	-> fixed export issues regarding duplicate filenames (issue TranskribusCore#13)
+	-> fixed issue regarding export of documents with backslashes in title (issue TranskribusCore#6) 
 	
 	
